--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -38,12 +38,17 @@ layout: default
   <!-- pannel -->
   <div id="panel-wrapper" class="col-xl-3 pl-2 text-muted">
 
+    <div class="access">
+      {% include similar-posts.html %}
+    </div>
+
     {% for _include in layout.pannel_includes %}
       {% assign _include_path = _include | append: '.html' %}
       {% include {{ _include_path }} %}
     {% endfor %}
   </div>
 
+  
 </div>
 
 <!-- tail -->
@@ -59,3 +64,5 @@ layout: default
   </div>
 </div> <!-- .row -->
 {% endif %}
+
+
