--- a/_includes/home-toc.html
+++ b/_includes/home-toc.html
@@ -6,7 +6,7 @@
   {% for sortedcategory in site.sorted-categories %} 
     {% for category in site.categories %}
     {% assign category_name = category | first %}
-    {% if sortedcategory != category_name %} 
+    {% if sortedcategory.name != category_name %} 
         {% continue %} 
     {% endif %}
     {% capture _category_url %}/categories/{{ category_name | slugify | url_encode }}/{% endcapture %}
