changed logo position and homepage image

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
 
 <div id="sidebar" class="d-flex flex-column align-items-end">
   <div class="profile-wrapper text-center">
-    <div id="avatar">
+    <div style="margin: 0 50px;">
       <a href="{{ '/' | relative_url }}" alt="avatar" class="mx-auto">
         {% if site.avatar != empty and site.avatar %}
           {% capture avatar_url %}
