--- a/_includes/similar-posts.html
+++ b/_includes/similar-posts.html
@@ -6,7 +6,13 @@
 <div id="access-lastmod" class="post">
     <div class="panel-heading">{{ category }}</div>
     <ul class="post-content pl-0 pb-1 ml-1 mt-2">
-        {% for post in items limit: 5 %}
+        {% assign posts_counter = 0 %}
+        {% for post in items %}
+            {% if posts_counter > 5 %}
+                {% break %}
+            {% else %}
+                {% assign posts_counter=posts_counter | plus:1 %}
+            {% endif %}
             {% if post.title == page.title %}
                 {% continue %}
             {% endif %}
